--- a/templates/grr_utilisateurs/edit.html.twig
+++ b/templates/grr_utilisateurs/edit.html.twig
@@ -5,9 +5,10 @@
 {% block body %}
     <h1>{{ grr_utilisateur.email }}</h1>
 
-    {{ include('grr_utilisateurs/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('grr_utilisateurs/_form.html.twig', {'button_label': 'form.btn.update'}) }}
 
-    <a href="{{ path('grr_user_index') }}">{{ 'back.to.list'|trans({},'actions') }}</a>
+    <br />
+    <a href="{{ path('grr_user_index') }}"><i class="fas fa-arrow-left"></i> {{ 'form.btn.cancel'|trans({},'actions') }}</a>
 
     {{ include('grr_utilisateurs/_delete_form.html.twig') }}
 {% endblock %}
