--- a/templates/grr_utilisateurs/show.html.twig
+++ b/templates/grr_utilisateurs/show.html.twig
@@ -10,51 +10,51 @@
     <table class="table table-bordered">
         <tbody>
         <tr>
-            <th>Login</th>
+            <th>{{ 'login.form.username.label'| trans }}</th>
             <td>{{ grr_utilisateur.login }}</td>
         </tr>
         <tr>
-            <th>Nom</th>
+            <th>{{ 'user.form.nom.label'| trans }}</th>
             <td>{{ grr_utilisateur.nom }}</td>
         </tr>
         <tr>
-            <th>Prenom</th>
+            <th>{{ 'user.form.prenom.label'| trans }}</th>
             <td>{{ grr_utilisateur.prenom }}</td>
         </tr>
         <tr>
-            <th>Email</th>
+            <th>{{ 'user.form.email.label'| trans }}</th>
             <td>{{ grr_utilisateur.email }}</td>
         </tr>
         <tr>
-            <th>Statut</th>
+            <th>{{ 'room.form.statutRoom.label'| trans }}</th>
             <td>{{ grr_utilisateur.statut }}</td>
         </tr>
         <tr>
-            <th>Etat</th>
+            <th>{{ 'user.form.etat.label'| trans }}</th>
             <td>{{ grr_utilisateur.etat }}</td>
         </tr>
         <tr>
-            <th>DefaultSite</th>
+            <th>{{ 'user.form.defaultSite.label'| trans }}</th>
             <td>{{ grr_utilisateur.defaultSite }}</td>
         </tr>
         <tr>
-            <th>DefaultArea</th>
+            <th>{{ 'user.form.defaultArea.label'| trans }}</th>
             <td>{{ grr_utilisateur.defaultArea }}</td>
         </tr>
         <tr>
-            <th>DefaultRoom</th>
+            <th>{{ 'user.form.defaultRoom.label'| trans }}</th>
             <td>{{ grr_utilisateur.defaultRoom }}</td>
         </tr>
         <tr>
-            <th>DefaultStyle</th>
+            <th>{{ 'user.form.defaultStyle.label'| trans }}</th>
             <td>{{ grr_utilisateur.defaultStyle }}</td>
         </tr>
         <tr>
-            <th>DefaultListType</th>
+            <th>{{ 'user.form.defaultListType.label'| trans }}</th>
             <td>{{ grr_utilisateur.defaultListType }}</td>
         </tr>
         <tr>
-            <th>DefaultLanguage</th>
+            <th>{{ 'user.form.defaultLanguage.label'| trans }}</th>
             <td>{{ grr_utilisateur.defaultLanguage }}</td>
         </tr>
         </tbody>
