--- a/templates/grr_area/index.html.twig
+++ b/templates/grr_area/index.html.twig
@@ -5,8 +5,9 @@
 {% block body %}
     <h1>{{ 'area.index.title'|trans({}, 'actions') }}</h1>
 
-    <a class="btn btn-primary" href="{{ path('grr_area_new') }}">{{ 'area.new.title'| trans({}, 'actions') }}</a>
+    <a class="btn btn-primary" href="{{ path('grr_area_new') }}"><i class="fas fa-plus"></i> {{ 'area.new.title'| trans({}, 'actions') }}</a>
     <br/> <br/>
+
     <table class="table table-bordered">
         <thead>
         <tr>
