--- a/templates/grr_room/_form.html.twig
+++ b/templates/grr_room/_form.html.twig
@@ -51,5 +51,5 @@
     </div>
 </div>
 
-<button class="btn btn-primary">{{ button_label|default('form.btn.save') | trans({},'actions') }}</button>
+<button class="btn btn-primary"><i class="far fa-save"></i> {{ button_label|default('form.btn.save') | trans({},'actions') }}</button>
 {{ form_end(form) }}
