--- a/templates/grr_type_area/_form.html.twig
+++ b/templates/grr_type_area/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
 {{ form_widget(form) }}
-<button class="btn btn-primary">{{ button_label|default('form.btn.save')|trans({}, 'actions') }}</button>
+<button class="btn btn-primary"><i class="far fa-save"></i> {{ button_label|default('form.btn.save')|trans({}, 'actions') }}</button>
 {{ form_end(form) }}
