--- a/templates/grr_type_area/edit.html.twig
+++ b/templates/grr_type_area/edit.html.twig
@@ -1,13 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit GrrTypeArea{% endblock %}
+{% block title %}{{ grr_type_area.typeName }}{% endblock %}
 
 {% block body %}
-    <h1>Edit GrrTypeArea</h1>
+    <h1>{{ grr_type_area.typeName }}</h1>
 
-    {{ include('grr_type_area/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('grr_type_area/_form.html.twig', {'button_label': 'form.btn.update'}) }}
 
-    <a href="{{ path('grr_area_index') }}">{{ 'form.btn.cancel'|trans({}, 'actions') }}</a>
+    <br />
+    <a href="{{ path('grr_area_index') }}"><i class="fas fa-arrow-left"></i> {{ 'form.btn.cancel'|trans({}, 'actions') }}</a>
 
     {{ include('grr_type_area/_delete_form.html.twig') }}
 {% endblock %}
