--- a/templates/grr_type_area/index.html.twig
+++ b/templates/grr_type_area/index.html.twig
@@ -3,16 +3,20 @@
 {% block title %}GrrTypeArea index{% endblock %}
 
 {% block body %}
-    <h1>GrrTypeArea index</h1>
+    <h1>{{ 'typeArea.index.title'| trans }}</h1>
+
+    <a class="btn btn-primary" href="{{ path('grr_type_area_new') }}"><i
+                class="fas fa-plus"></i> {{ 'type_area.new.title'| trans({}, 'actions') }}</a>
+    <br/> <br/>
 
     <table class="table">
         <thead>
-            <tr>
-                <th>TypeName</th>
-                <th>OrderDisplay</th>
-                <th>Couleur</th>
-                <th>TypeLetter</th>
-            </tr>
+        <tr>
+            <th>{{ 'typeArea.form.typeName.label'|trans }}</th>
+            <th>{{ 'typeArea.form.orderDisplay.label'|trans }}</th>
+            <th>{{ 'typeArea.form.couleur.label'|trans }}</th>
+            <th>{{ 'typeArea.form.typeLetter.label'|trans }}</th>
+        </tr>
         </thead>
         <tbody>
         {% for grr_type_area in grr_type_areas %}
@@ -24,11 +28,10 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="4">no records found</td>
+                <td colspan="4">{{ 'records.notfound'| trans({}, 'actions') }}</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('grr_type_area_new') }}">Create new</a>
 {% endblock %}
