--- a/templates/grr_type_area/show.html.twig
+++ b/templates/grr_type_area/show.html.twig
@@ -16,7 +16,7 @@
         </tr>
         <tr>
             <th>{{ 'typeArea.form.couleur.label'|trans }}</th>
-            <td>{{ grr_type_area.couleur }}</td>
+            <td style="background-color: {{ grr_type_area.couleur }}">{{ grr_type_area.couleur }}</td>
         </tr>
         <tr>
             <th>{{ 'typeArea.form.typeLetter.label'|trans }}</th>
