--- a/templates/grr_setting/index.html.twig
+++ b/templates/grr_setting/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>GrrSetting index</h1>
 
-    <table class="table">
+    <table class="table table-bordered">
         <thead>
             <tr>
                 <th>Name</th>
@@ -28,5 +28,4 @@
         </tbody>
     </table>
 
-    <a href="{{ path('grr_setting_new') }}">Create new</a>
 {% endblock %}
