--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,22 +1,55 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}{{ 'login.title'|trans(error.messageData, 'actions') }}{% endblock %}
+{% block stylesheets %}
+
+    <link href="{{ asset('css/signin.css') }}" rel="stylesheet">
+    <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
+    </style>
+{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
-
-    <h1 class="h3 mb-3 font-weight-normal">{{ 'login.title'|trans(error.messageData, 'actions') }}</h1>
-    <label for="inputLogin" class="sr-only">{{ 'login.form.username.label'|trans(error.messageData, 'actions') }}</label>
-    <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" placeholder="Login" required autofocus>
-    <label for="inputPassword" class="sr-only">{{ 'login.form.password.label'|trans(error.messageData, 'actions') }}</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" placeholder="{{ 'login.form.password.placeholder'|trans(error.messageData, 'actions') }}" required>
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+    <form class="form-signin">
+        <img class="mb-4" src="{{ asset('totem_grr.png') }}" alt="" width="72" height="72">
+        <h1 class="h3 mb-3 font-weight-normal">{{ 'login.title'|trans(error.messageData, 'actions') }}</h1>
+        {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
+        <label for="inputEmail"
+               class="sr-only">{{ 'login.form.username.label'|trans(error.messageData, 'actions') }}</label>
+        <input type="email" name="login" value="{{ last_username }}" id="inputEmail" class="form-control"
+               placeholder="Email address" required autofocus>
+        <label for="inputPassword"
+               class="sr-only">{{ 'login.form.password.label'|trans(error.messageData, 'actions') }}</label>
+        <input name="password" type="password" id="inputPassword" class="form-control"
+               placeholder="{{ 'login.form.password.placeholder'|trans(error.messageData, 'actions') }}" required>
+        <div class="checkbox mb-3">
+            <label>
+                <input type="checkbox"
+                       value="remember-me"> {{ 'login.remember.me'|trans(error.messageData, 'actions') }}
+            </label>
+        </div>
+        <input type="hidden" name="_csrf_token"
+               value="{{ csrf_token('authenticate') }}"
+        >
+        <button class="btn btn-lg btn-primary btn-block"
+                type="submit">{{ 'btn.login'|trans(error.messageData, 'actions') }}</button>
+    </form>
+    <p class="mt-5 mb-3 text-muted">&copy; 2017-2019</p>
 
     {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
@@ -29,8 +62,4 @@
         </div>
     #}
 
-    <button class="btn btn-lg btn-primary" type="submit">
-      {{ 'btn.login'|trans(error.messageData, 'actions') }}
-    </button>
-</form>
 {% endblock %}
