--- a/templates/grr_area/edit.html.twig
+++ b/templates/grr_area/edit.html.twig
@@ -7,8 +7,9 @@
 
     {{ include('grr_area/_form.html.twig', {'button_label': 'form.btn.update'}) }}
 
-    <br />
-    <a href="{{ path('grr_area_index') }}"><i class="fas fa-arrow-left"></i> {{ 'form.btn.cancel'|trans({}, 'actions') }}</a>
+    <br/>
+    <a href="{{ path('grr_area_show',{'id':grre_area.id}) }}"><i
+                class="fas fa-arrow-left"></i> {{ 'form.btn.cancel'|trans({}, 'actions') }}</a>
 
     {{ include('grr_area/_delete_form.html.twig') }}
 {% endblock %}
