--- a/templates/grr_entry/edit.html.twig
+++ b/templates/grr_entry/edit.html.twig
@@ -3,11 +3,13 @@
 {% block title %}Edit GrrEntry{% endblock %}
 
 {% block body %}
-    <h1>Edit GrrEntry</h1>
+    <h1>{{ grr_entry.name }}</h1>
 
     {{ include('grr_entry/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('grr_entry_index') }}">back to list</a>
+    <br/>
+    <a href="{{ path('grr_entry_show',{'id':grr_entry.id}) }}"><i
+                class="fas fa-arrow-left"></i> {{ 'form.btn.cancel'|trans({}, 'actions') }}</a>
 
     {{ include('grr_entry/_delete_form.html.twig') }}
 {% endblock %}
