--- a/templates/entry/index.html.twig
+++ b/templates/entry/index.html.twig
@@ -7,6 +7,10 @@
 
     {% include 'search/entry.html.twig' %}
 
+    <a class="btn btn-primary" href="{{ path('grr_entry_new') }}"><i
+                class="fas fa-plus"></i> {{ 'entry.new.title'| trans({}, 'actions') }}</a>
+    <br/> <br/>
+
     <table class="table table-bordered">
         <thead>
         <tr>
