--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,7 +44,7 @@
     </div>
 </nav>
 
-<main role="main" class="container pt-3">
+<main role="main" class="container-fluid pt-3">
 
     {% include '_flash_messages.html.twig' %}
 
