--- a/templates/entry/show.html.twig
+++ b/templates/entry/show.html.twig
@@ -22,7 +22,7 @@
                 </tr>
                 <tr>
                     <th>{{ 'entry.form.room.label'|trans }}</th>
-                    <td>{{ entry.roomId | room_getName }}</td>
+                    <td>{{ entry.room }}</td>
                 </tr>
                 <tr>
                     <th>Timestamp</th>
