--- a/templates/room/_form.html.twig
+++ b/templates/room/_form.html.twig
@@ -4,7 +4,7 @@
 
 <div class="row">
     <div class="col-6">
-        {{ form_row(form.roomName) }}
+        {{ form_row(form.name) }}
         {{ form_row(form.capacity) }}
         {{ form_row(form.statutRoom) }}
         {{ form_row(form.pictureRoom) }}
