--- a/templates/area/_form.html.twig
+++ b/templates/area/_form.html.twig
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-6">
-        {{ form_row(form.areaName) }}
+        {{ form_row(form.name) }}
         {{ form_row(form.orderDisplay) }}
     </div>
     <div class="col-6">
