--- a/templates/area/_list_rooms.html.twig
+++ b/templates/area/_list_rooms.html.twig
@@ -10,7 +10,7 @@
     <tbody>
     {% for room in rooms %}
         <tr>
-            <td><a href="{{ path('grr_room_show', {'id': room.id}) }}">{{ room.roomName }}</a></td>
+            <td><a href="{{ path('grr_room_show', {'id': room.id}) }}">{{ room.name }}</a></td>
             <td>{{ room.orderDisplay }}</td>
         </tr>
     {% else %}
