--- a/templates/area/edit.html.twig
+++ b/templates/area/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Edit GrrArea{% endblock %}
 
 {% block body %}
-    <h1>{{ area.areaName }}</h1>
+    <h1>{{ area.name }}</h1>
 
     {{ include('area/_form.html.twig', {'button_label': 'form.btn.update'}) }}
 
