--- a/templates/area/show.html.twig
+++ b/templates/area/show.html.twig
@@ -1,10 +1,10 @@
 {% extends 'layout_front.html.twig' %}
 
-{% block title %}{{ area.areaName }}{% endblock %}
+{% block title %}{{ area.name }}{% endblock %}
 
 {% block body %}
 
-    <h1>{{ area.areaName }}</h1>
+    <h1>{{ area.name }}</h1>
 
     {% include 'area/_actions.html.twig' %}
 
