--- a/templates/entry/_form.html.twig
+++ b/templates/entry/_form.html.twig
@@ -15,7 +15,7 @@
         {{ form_row(form.area) }}
     </div>
     <div class="col-6">
-        {{ form_row(form.roomId) }}
+        {{ form_row(form.room) }}
     </div>
 </div>
 
