--- a/templates/front/_calendar_navigation.html.twig
+++ b/templates/front/_calendar_navigation.html.twig
@@ -1,13 +1,9 @@
-
 <table class="table">
     <tr>
-        <th><a href="{{ path('grr_front_home', {'month': previous|date('n')}) }}">Précédent</a></th>
-        <th>{{ current | date('Y-m') }}</th>
-        <th><a href="{{ path('grr_front_home', {'month': next|date('n')}) }}">Suivant</a></th>
+        <th colspan="3"><a href="{{ path('grr_front_home', {'month': previous|date('n')}) }}">Précédent</a></th>
+        <th colspan="2">{{ current | date('Y-m') }}</th>
+        <th colspan="3"><a href="{{ path('grr_front_home', {'month': next|date('n')}) }}">Suivant</a></th>
     </tr>
-</table>
-
-<table class="table table-bordered">
     <tr>
         <th>{{ 'week'|trans }}</th>
         <th>{{ 'monday'|trans }}</th>
