--- a/templates/room/_actions.html.twig
+++ b/templates/room/_actions.html.twig
@@ -4,7 +4,7 @@
 <a href="{{ path('grr_room_edit', { 'id': room.id }) }}" role="button"
    class="btn btn-primary" target="apercu"><i class="far fa-eye"></i> {{ 'form.btn.see'|trans({}, 'actions') }}</a>
 
-<a href="{{ path('grr_area_show',{'id': room.areaId}) }}" class="btn btn-primary" role='button'><i
+<a href="{{ path('grr_area_show',{'id': room.area.id}) }}" class="btn btn-primary" role='button'><i
             class="fas fa-list"></i>
     {{ 'room.back.toarea'|trans({}, 'actions') }}
 </a>
