--- a/templates/calendar/data/_week_line_data.html.twig
+++ b/templates/calendar/data/_week_line_data.html.twig
@@ -17,7 +17,7 @@
 
 {% endif %}
 
-<td>{% include 'front/_day_line_data.html.twig' %}</td>
+<td>{% include 'calendar/data/_day_line_data.html.twig' %}</td>
 
 {# retour a la ligne si dimanche #}
 {% if numericDay == 0 %}
