--- a/templates/calendar/navigation/_week_line.html.twig
+++ b/templates/calendar/navigation/_week_line.html.twig
@@ -17,7 +17,7 @@
     <td>{{ dateTime | date('W') }}</td>
 {% endif %}
 
-<td>{% include 'front/_day_line.html.twig' %}</td>
+<td>{% include 'calendar/navigation/_day_line.html.twig' %}</td>
 
 {# retour a la ligne si dimanche #}
 {% if numericDay == 0 %}
