--- a/templates/calendar/data/_calendar_data.html.twig
+++ b/templates/calendar/data/_calendar_data.html.twig
@@ -11,7 +11,7 @@
     <tbody>
     <tr>
         {% for day in days %}
-            {% include 'default/_week_line_data.html.twig' %}
+            {% include 'calendar/data/_week_line_data.html.twig' %}
         {% endfor %}
     <tr>
     </tbody>
