--- a/templates/calendar/navigation/_cell_week.html.twig
+++ b/templates/calendar/navigation/_cell_week.html.twig
@@ -1,3 +1,5 @@
 <td>
-<a href="{{ path('grr_front_week', {'week': dateTime|date('W')}) }}">{{ dateTime | date('W') }}</a>
+    <a href="{{ generateRouteWeekView(dateTime|date('W')) }}">
+        {{ dateTime | date('W') }}
+    </a>
 </td>
