--- a/templates/calendar/navigation/_button_previous.html.twig
+++ b/templates/calendar/navigation/_button_previous.html.twig
@@ -1,3 +1,3 @@
-<a href="{{ path('grr_front_month', {'month': previous|date('n')}) }}" title="{{ 'previous'|trans({},'actions') }}">
+<a href="{{ generateRouteMonthView(previous|date('Y'), previous|date('n')) }}" title="{{ 'previous'|trans({},'actions') }}">
     <i class="fas fa-arrow-left"></i>
 </a>
