--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -13,7 +13,7 @@
     <a href="{{ path('grr_front_day', {'day': 3}) }}">Par jour</a>
     <br/><br/>
 
-    <a href="{{ path('grr_front_week', {'week': 3}) }}">Par semaine</a>
+    <a href="{{ path('grr_front_week', {'year': 2019,'week': 3}) }}">Par semaine</a>
     <br/><br/>
 
 {% endblock %}
