--- a/templates/front/_rooms_options.html.twig
+++ b/templates/front/_rooms_options.html.twig
@@ -1,4 +1,4 @@
 <option value="">{{ 'menu.select.room' | trans }}</option>
 {% for room in rooms %}
-<option value="{{ room.id }}">{{ room.roomName }}</option>
+<option value="{{ room.id }}">{{ room.name }}</option>
 {% endfor %}
