--- a/templates/front/day.html.twig
+++ b/templates/front/day.html.twig
@@ -4,8 +4,14 @@
 
 {% block body %}
 
+    {% include 'front/_navigation.html.twig' %}
+
+    <h3 class="text-center text-success">{{ current|date('m Y') }}</h3>
 
     {{ data|raw }}
 
+{% endblock %}
 
+{% block scripts %}
+    {% include 'front/_menu_select.js.html.twig' %}
 {% endblock %}
