--- a/templates/calendar/navigation/_cell_week.html.twig
+++ b/templates/calendar/navigation/_cell_week.html.twig
@@ -1,5 +1,5 @@
 <td>
-    <a href="{{ generateRouteWeekView(dateTime|date('W')) }}">
-        {{ dateTime | date('W') }}
+    <a href="{{ generateRouteWeekView(numericWeek) }}">
+        {{ numericWeek }}
     </a>
 </td>
