--- a/templates/calendar/navigation/_week_line.html.twig
+++ b/templates/calendar/navigation/_week_line.html.twig
@@ -1,6 +1,13 @@
 {% set dateTime = day.date %}
 
 {% set numericDay = dateTime|date('w') %}
+{% set numericWeek = dateTime|date('W') %}
+
+{% set class = "" %}
+
+{% if numericWeek == weekSelected %}
+    {% set class = "table-info" %}
+{% endif %}
 
 {# premiere ligne #}
 {% if loop.first %}
@@ -22,7 +29,8 @@
 {# retour a la ligne si dimanche #}
 {% if numericDay == 0 %}
     </tr>
-<tr>
+
+<tr class="{{ class }}">
 
     {% endif %}
 
